add rubric to scv

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
   </div>
 
   <label>Strategic / Competitive Value</label>
+  <div class="rubric-list">
+    <p><strong>1:</strong> Likely improves the user experience a bit, but doesn’t set us apart in the market at all.</p>
+    <p><strong>5:</strong> Provides a notable advantage in the market.</p>
+    <p><strong>10:</strong> Required to be noticeable in the market or even considered against competitors.</p>
+  </div>
   <div class="btn-group">
     <button data-group="scv" data-value="1">1</button>
     <button data-group="scv" data-value="2">2</button>
