--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <h1>Cost / Benifit Calculator</h1>
-  <p>A simple calculator for determining the feasibility score of a feature or enhancement. This pointing rubric is meant to serve as a guide. We must still practice critical thinking and common sense project management, of course.</p>
+  <p>A simple calculator for determining the feasibility score of a feature or enhancement.</p>
 
   <h2>Benifits</h2>
 
